# nanogpt

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  sample.py  train.py  trainer.py
.devcontainer/: devcontainer.json
configs/: config.yaml  finetune_shakespeare.yaml  rotten_tomatoes_binary_classification.yaml  rotten_tomatoes_binary_classification_fast.yaml  train_gpt2.yaml  train_max_owt.yaml  train_shakespeare_char.yaml
data/openwebtext/: prepare.py
data/shakespeare/: prepare.py
data/shakespeare_char/: prepare.py
nanogpt/: config.py  criterion.py  dataset.py  train.py
nanogpt/model/: __init__.py  bigram.py  gpt.py  transformer.py
notebooks/: nanogpt-dev.ipynb
