[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = "Implementation of GPT in pytorch"
authors = ["martinabeleda <martin.abeleda@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
wandb = "^0.13.9"
jupyter = "^1.0.0"
requests = "^2.28.2"
loguru = "^0.6.0"
numpy = "^1.24.1"
pandas = "^1.5.3"
accelerate = "^0.15.0"
pytorch-lightning = "^1.9.0"
datasets = "^2.9.0"
transformers = "^4.26.0"
evaluate = "^0.4.0"
scikit-learn = "^1.2.1"
tqdm = "^4.64.1"
hydra-core = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
ruff = "^0.0.228"
pytest = "^7.2.1"
isort = "^5.11.4"

[tool.poetry.scripts]
train = "nanogpt.train:train"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
use_parentheses = true
known_first_party = "nanogpt"
known_third_party = ["wandb"]

[tool.black]
max-line-length = 100
line-length = 100
