[project]
name = "nanogpt"
version = "0.1.0"
description = "Implementation of GPT in pytorch"
authors = [{ name = "martinabeleda", email = "martin.abeleda@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch>=1.13.1",
    "wandb>=0.13.9",
    "jupyter>=1.0.0",
    "requests>=2.28.2",
    "loguru>=0.6.0",
    "numpy>=1.24.1",
    "pandas>=1.5.3",
    "accelerate>=0.15.0",
    "pytorch-lightning>=1.9.0",
    "datasets>=2.9.0",
    "transformers>=4.26.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.2.1",
    "tqdm>=4.64.1",
    "hydra-core>=1.3.1",
]

[project.scripts]
train = "nanogpt.train:train"

[dependency-groups]
dev = [
    "black>=22.12.0",
    "ruff>=0.0.228",
    "pytest>=7.2.1",
    "isort>=5.11.4",
    "pre-commit>=3.0.1",
    "ipython>=8.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
use_parentheses = true
known_first_party = "nanogpt"
known_third_party = ["wandb"]
