[project]
name = "nanogpt"
version = "0.2.0"
description = "GPT language model training and text generation in PyTorch"
authors = [{ name = "martinabeleda", email = "martin.abeleda@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "wandb>=0.13.9",
    "numpy>=1.24.1",
    "loguru>=0.6.0",
    "requests>=2.28.2",
    "tiktoken>=0.3.0",
    "datasets>=2.9.0",
    "transformers>=4.26.0",
    "tqdm>=4.64.1",
    "hydra-core>=1.3.1",
]

[project.scripts]
train = "train:main"

[dependency-groups]
dev = [
    "black>=22.12.0",
    "ruff>=0.0.228",
    "pytest>=7.2.1",
    "isort>=5.11.4",
    "pre-commit>=3.0.1",
    "ipython>=8.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
use_parentheses = true
known_first_party = "nanogpt"
known_third_party = ["wandb"]
